--- a/MyTreeMap/pom.xml
+++ b/MyTreeMap/pom.xml
@@ -5,11 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>edu.frcc.csc1061j</groupId>
-  <artifactId>sentimentanalysis</artifactId>
+  <artifactId>mytreemap</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>sentimentanalysis</name>
-  <description>A simple sentimentanalysis.</description>
+  <name>mytreemap</name>
+  <description>A simple mytreemap.</description>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
